--- a/thesis-ch01-intro.tex
+++ b/thesis-ch01-intro.tex
@@ -159,7 +159,7 @@ subset of configuration space.
       \draw[->,thick,black!70] (whatopt) -- ( 6.0,-3.0) -- (family);
 
    \end{tikzpicture}
-   \caption[][0.3cm]{Outline of the thesis document.
+   \caption[][0.3cm]{Outline of the dissertation document.
       Motivated by recurring manipulation tasks,
       we consider two questions:
       (a) how to optimize a motion planning objective
@@ -172,7 +172,7 @@ subset of configuration space.
 
 \section{Outline of Approach}
 
-This thesis develops an approach to motion planning
+This dissertation develops an approach to motion planning
 for articulated robots
 which addresses these four challenges.
 We provide an outline of the thesis in Figure~\ref{fig:intro:outline}.
@@ -286,11 +286,12 @@ cached checks and multi-step problems.
          %LEMUR over a family of C-space subsets \\
       \bottomrule
    \end{tabular}}
-   \caption[][0.5cm]{Table of algorithms developed in this thesis.}
+   \caption[][0.5cm]{Table of four computational problems and
+      the respective algorithms developed in this dissertation.}
    \label{table:intro:table-of-algorithms}
 \end{table*}
 
-We summarize the contributions of this thesis here.
+We summarize the contributions of this dissertation here.
 A table of the developed algorithms is presented in
 Table~\ref{table:intro:table-of-algorithms}
 
@@ -346,7 +347,8 @@ Table~\ref{table:intro:table-of-algorithms}
       \label{subfig:intro:platform-chimp}
    }%
    
-   \caption[][0.5cm]{Robotic platforms considered in this thesis.}
+   \caption[][0.5cm]{The three robotic platforms considered
+      in this dissertation.}
    \label{fig:intro:platforms}
 \end{figure*}
 
