--- a/thesis-ch05-lemur.tex
+++ b/thesis-ch05-lemur.tex
@@ -17,7 +17,7 @@ In this chapter,
 we will ask a more fundamental question
 -- what objective should we be optimizing in the first place?
 Chapter~\ref{chap:roadmaps} laid out the functionals
-$x_{\ms{valid}}$ and $x_{\ms{path}}$
+$x_{\ms{valid}}$ and $x_{\ms{int}}$
 capturing the feasible and optimal motion planning problems,
 respectively.
 But as we report in the introduction,
