more work on ch2, fixed up refs, makefile

--- a/references.bib
+++ b/references.bib
@@ -48,7 +48,7 @@
    acmid = {2899659},
    publisher = {Elsevier Science Publishers Ltd.},
    address = {Essex, UK},
- } 
+}
 
 === Created manually ===
 @inproceedings{alami1994planalgs,
@@ -298,6 +298,16 @@
 }
 
 === From dl.acm.org ===
+@book{canny1988complexitymotionplanning,
+   author = {John F. Canny},
+   title = {The Complexity of Robot Motion Planning},
+   year = {1988},
+   isbn = {0-262-03136-1},
+   publisher = {MIT Press},
+  address = {Cambridge, MA, USA},
+}
+
+=== From dl.acm.org ===
 @article{champeauxsint1977bhffa,
    author = {Dennis de Champeaux and Lenie Sint},
    title = {An Improved Bidirectional Heuristic Search Algorithm},
@@ -334,7 +344,7 @@
    acmid = {322360},
    publisher = {ACM},
    address = {New York, NY, USA},
-} 
+}
 
 === From RI website ===
 @inproceedings{chang2010pregrasp,
@@ -491,7 +501,7 @@
    url = {http://dl.acm.org/citation.cfm?id=1882757.1882766},
    acmid = {1882766},
    publisher = {Chapman \& Hall/CRC},
-} 
+}
 
 === From RI website ===
 @inproceedings{diankov2008bispace,
@@ -638,6 +648,20 @@
    pages = {160--167},
 }
 
+=== From IEEE Xplore ===
+@inproceedings{faverjon1984octree,
+   author = {B. Faverjon},
+   title = {Obstacle avoidance using an octree in the configuration
+      space of a manipulator},
+   booktitle = {Robotics and Automation. Proceedings. 1984 IEEE
+      International Conference on},
+   year = {1984},
+   month = mar,
+   volume = {1},
+   pages = {504-512},
+   doi = {10.1109/ROBOT.1984.1087218},
+}
+
 === From citeseerx ===
 @inproceedings{felner2012epastar,
    author = {Ariel Felner and Nathan Sturtevant and Meir Goldenberg
@@ -751,7 +775,7 @@
    doi = {10.1006/jagm.1999.1048},
    publisher = {Academic Press, Inc.},
    address = {Duluth, MN, USA},
-} 
+}
 
 === Manual ===
 @techreport{fulkerson1953lbap,
@@ -765,7 +789,7 @@
 === From IEEE Xplore ===
 @inproceedings{gammell2014informedrrtstar,
    author = {J. D. Gammell and S. S. Srinivasa and T. D. Barfoot},
-   title={Informed RRT*: Optimal sampling-based path planning focused
+   title = {Informed RRT*: Optimal sampling-based path planning focused
       via direct sampling of an admissible ellipsoidal heuristic},
    year = {2014},
    month = sep,
@@ -785,7 +809,7 @@
       Random Geometric Graphs},
    booktitle = icra,
    year = {2015},
-   month = may
+   month = may,
 }
 
 === Manual, from author's website ===
@@ -1057,8 +1081,8 @@
    year = {2012},
    month = oct,
    pages = {1206-1212},
-   doi={10.1109/IROS.2012.6386194},
-   ISSN={2153-0858},
+   doi = {10.1109/IROS.2012.6386194},
+   ISSN = {2153-0858},
 }
 
 === From IEEE Xplore ===
@@ -1116,17 +1140,17 @@
 === From sagepub ===
 @article{janson2015fmtstar,
    author = {Janson, Lucas and Schmerling, Edward and Clark, Ashley
-      and Pavone, Marco}, 
+      and Pavone, Marco},
    title = {Fast marching tree: A fast marching sampling-based method
       for optimal motion planning in many dimensions},
    journal = {The International Journal of Robotics Research},
-   volume = {34}, 
-   number = {7}, 
-   pages = {883-921}, 
-   year = {2015}, 
-   doi = {10.1177/0278364915577958}, 
-   URL = {http://ijr.sagepub.com/content/34/7/883.abstract}, 
-   eprint = {http://ijr.sagepub.com/content/34/7/883.full.pdf+html}, 
+   volume = {34},
+   number = {7},
+   pages = {883-921},
+   year = {2015},
+   doi = {10.1177/0278364915577958},
+   URL = {http://ijr.sagepub.com/content/34/7/883.abstract},
+   eprint = {http://ijr.sagepub.com/content/34/7/883.full.pdf+html},
 }
 
 === From IEEE Xplore ===
@@ -1512,10 +1536,10 @@
    number = {12},
    pages = {999-1030},
    year = {2002},
-   doi = {10.1177/0278364902021012001}, 
+   doi = {10.1177/0278364902021012001},
    url = {http://ijr.sagepub.com/content/21/12/999.abstract},
    eprint = {http://ijr.sagepub.com/content/21/12/999.full.pdf+html},
-   journal = {The International Journal of Robotics Research}
+   journal = {The International Journal of Robotics Research},
 }
 
 === Manual ===
@@ -1550,7 +1574,7 @@
    booktitle = {Proceedings of Robotics: Science and Systems},
    year = {2009},
    address = {Seattle, USA},
-   month = jun
+   month = jun,
 }
 
 === From papers.nips.cc ===
@@ -1875,7 +1899,7 @@
    author = {Quinlan, Sean},
    title = {Real-time modification of collision-free paths},
    school = {Stanford University},
-   year = 1994,
+   year = {1994},
    month = dec,
    url = {http://searchworks.stanford.edu/view/3034404},
 }
@@ -1894,8 +1918,8 @@
    doi = {http://dx.doi.org/10.1006/jagm.1996.0046},
 }
 
-=== Created manually,
-    see http://www.gaussianprocess.org/gpml/ ===
+=== Created manually, ===
+=== see http://www.gaussianprocess.org/gpml/ ===
 @book{rasmussen2006gpml,
    author = {Carl Edward Rasmussen and Christopher K. I. Williams},
    title = {Gaussian Processes for Machine Learning},
@@ -1948,6 +1972,20 @@
    issn = {0272-5428},
 }
 
+=== From IEEE Xplore ===
+@inproceedings{rimon1989navigationfunctions,
+   author = {E. Rimon and D. E. Koditschek},
+   title = {The construction of analytic diffeomorphisms for exact
+      robot navigation on star worlds},
+   booktitle = {Robotics and Automation, 1989. Proceedings., 1989 IEEE
+      International Conference on},
+   year = {1989},
+   volume = {1},
+   pages = {21--26},
+   doi = { 10.1109/ROBOT.1989.99962},
+   month = may,
+}
+
 === From Springer website ===
 @article{rodriguez2003evalhumanrobot,
    author = {Rodriguez, G. and Weisbin, C. R.},
@@ -1998,7 +2036,7 @@
    year = {1988},
    month = apr,
    pages = {254-260 vol.1},
-   doi={10.1109/ROBOT.1988.12057},
+   doi = {10.1109/ROBOT.1988.12057},
 }
 
 === From sagepub (IJRR) ===
@@ -2060,7 +2098,7 @@
    institution = {New York Univesity Courant Institute of Mathematical
       Sciences Department of Computer Science},
    year = {1982},
-   month = feb
+   month = feb,
 }
 
 === From sagepub (IJRR) ===
@@ -2198,7 +2236,7 @@
    year = {2015},
    month = sep,
    pages = {2072--2078},
-   doi={10.1109/IROS.2015.7353652},
+   doi = {10.1109/IROS.2015.7353652},
 }
 
 === inproceedings CiteSeer ===
@@ -2220,7 +2258,7 @@
       on Artificial Intelligence},
    year = {1995},
    pages = {1652--–1659},
-} 
+}
 
 === Created manually ===
 @article{stentz2014chimp,
@@ -2282,6 +2320,19 @@
    note = {http://ompl.kavrakilab.org},
    volume = {19},
    year = {2012},
+}
+
+=== From http://www.mathnet.ru/php/archive.phtml?wshow=paper&jrnid=zvmmf&paperid=6788&option_lang=eng ===
+@article{sukharev1971extremum,
+   author = {A.~G.~Sukharev},
+   title = {Optimal strategies of the search for an extremum},
+   doi = {10.1016/0041-5553(71)90008-5},
+   journal = {{USSR} Computational Mathematics and Mathematical Physics},
+   year = {1971},
+   volume = {11},
+   number = {4},
+   pages = {119--137},
+   note = {Translated from Russian, Zh. Vychisl. Mat. Mat. Fiz., 11:(4):910--924, 1971.},
 }
 
 === From Springer website ===
