--- a/thesis-ch05-lemur.tex
+++ b/thesis-ch05-lemur.tex
@@ -981,7 +981,7 @@ of the path returned by LEMUR
 LEMUR searches a sequence of progressively densified roadmaps in
 $\mathcal{C}$.
 Analysis of the performance of lazy search for asymptotically-optimal
-regimes \cite{hauser2015lazy}
+regimes \citep{hauser2015lazy}
 has identified the nearest-neighbor queries required to construct
 the roadmap itself as a significant component of planning cost.
 We exploit two factors to mitigate this.
@@ -1117,7 +1117,7 @@ The planning parameter was chosen as $\lambda_p = \lambda_U$.
 
 We compared LEMUR against
 RRT-Connect \citep{kuffner2000rrtconnect}
-%LBKPIECE \cite{sucan2008kpiece},
+%LBKPIECE \citep{sucan2008kpiece},
 and Batch Informed Trees (BIT*) \citep{gammell2015bitstar}
 as implemented in OMPL version 1.1.0
 with default parameters.
