--- a/thesis-ch06-family.tex
+++ b/thesis-ch06-family.tex
@@ -1525,7 +1525,7 @@ in manipulation tasks.
 %
 %\subsubsection*{Dimensionality Reduction}
 %
-%The Handey \cite{lozanoperez1987handey} robot
+%The Handey \citep{lozanoperez1987handey} robot
 %assumed a box that contained the wrist links at a range of DOF values.
 %
 %\subsubsection*{Dual-Arm Stuff}
