--- a/thesis-ch07-conclusion.tex
+++ b/thesis-ch07-conclusion.tex
@@ -949,7 +949,7 @@ if each colliding path segment is assigned a penalty cost.
 %Which path should we consider next (e.g $\pi_a$ or $\pi_b$)?
 %
 %What is our model for $P_{\mbox{\scriptsize free}}(\pi)$?
-%Relate to GPs for classification\cite{rasmussen2006gpml}.
+%Relate to GPs for classification\citep{rasmussen2006gpml}.
 %
 %We are operating under assumptions:
 %\begin{itemize}
